# 3D-Print

./: .env  .gitignore  Dockerfile  Dockerfile-frontend  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: database.py  dependencies.py  enums.py  main.py
app/models/: job.py  material.py  printer.py  user.py
app/routes/: auth.py  job.py  material.py  printer.py
app/schemas/: job.py  material.py  printer.py  user.py
app/static/: index.html  script.js  styles.css
app/utils/: auth.py  minio.py  sort_jobs.py  validate_file_minio.py
my/: .gitignore  Dockerfile-frontend  next.config.ts  package-lock.json  package.json
my/app/: AuthGuard.tsx  BurgerMenu.tsx  ClientLayout.tsx  ClientNav.tsx  LoadingSpinner.tsx  Sidebar.tsx  globals.css  layout.tsx  middleware.ts  page.tsx  wrapper.tsx
my/app/admin/: page.tsx
my/app/api/auth/[...nextauth]/: route.ts
my/app/dashboard/: page.tsx
my/app/jobs/: page.tsx
my/app/jobs/create/: page.tsx
my/app/jobs/queue/[printer_id]/: page.tsx
my/app/login/: page.tsx
my/app/materials/: page.tsx
my/app/materials/[id]/edit/: page.tsx
my/app/materials/create/: page.tsx
my/app/materials/update/[id]/: page.tsx
my/app/printers/: page.tsx
my/app/printers/[id]/edit/: page.tsx
my/app/printers/create/: page.tsx
my/app/register/: page.tsx
my/app/users/auth/login/: page.tsx
my/app/users/auth/register/: page.tsx
my/lib/: api.ts  store.ts
